# stigman

./: README.md  lessonslearned.md  pyproject.toml
stigman/: __init__.py  agent.py  config.py  main.py
stigman/tools/: detect.py  parse.py  prereqs.py  remediate.py  report.py  scan.py
